# antivirus

AVP32/: AVPFPI.dsw  AVP_ALER.h  Avp.dsw  Avp_iocl.h  Makefile.in  Obj16.h  Projects.x86  TYPEDEF.h  configure  configure.in  fn.h  tsigner.bat
AVP32/AVE_SQL/: AVE_Fld.h  AVE_Sql.cpp  AVE_Sql.dsp  AVE_Sql.h  EvCache.cpp  EvCache.h  ReadMe.txt  StdAfx.cpp  StdAfx.h
AVP32/AVP Engine/: AVP Engine.dsp  ENGINE.rtf  Engine.mak  README.txt  files.lst
AVP32/AVP Engine Gdata/: AVP Engine GData.dsp  AVP Engine GData.mak  files.lst
AVP32/AVPFPI/: AVP-FPI-DLL-spec.doc  AVPFPI.cpp  AVPFPI.dsp  AVPFPI.h  ReadMe.txt  StdAfx.h  avpfpi.rc
AVP32/AVP_32/: Agentint.cpp  Agentint.h  Avp32.cpp  Avp32.dep  Avp32.dsp  Avp32.h  Avp32.mak  Avp32.odl  Avp32.rc  Avp32dlg.cpp  Avp_stub.c  Avp_stub.mak  DisDlg.cpp  DisDlg.h  DlgProxy.cpp  DlgProxy.h  Dos AVP_STUB.dsp  FindDlg.cpp  FindDlg.h  LogCtrl.cpp  LogCtrl.h  PID.h  Scandir.cpp  Scandir.h  StdAfx.cpp  StdAfx.h  TBRep.cpp  TBRep.h  TabPages.cpp  TabPages.h  aboutviewctrl.cpp  aboutviewctrl.h  avp32dlg.h  cust.cpp  cust.h  reportviewctrl.cpp  reportviewctrl.h  resource.h  resource.hm  ver_mod.h
AVP32/AvcWapi/: avcwapi.c  avcwapi.dsp
AVP32/Avp95/: Avp95 VxD.dsp  Avp95.cpp  Avp95.h  Avp95.rc  Avp95.rc2  Avp95api.cpp  Avp95api.h  Avp95ctl.h  Avpfpi.cpp  Avpsign.cpp  PostBuild.cmd  StdAfx.cpp  StdAfx.h  Vxdio.cpp  avp95.def  resource.h
AVP32/AvpBase/: AvpBase.cpp  AvpBase.dep  AvpBase.dsp  AvpBase.h  AvpBase.mak  AvpBase.rc  Avpbase.def  NTFSStream.h  RESOURCE.h  StdAfx.cpp  StdAfx.h  ver_mod.h
AVP32/AvpEdit/: AvpEdit.cpp  AvpEdit.dsp  AvpEdit.h  AvpEdit.rc  AvpEditDoc.cpp  AvpEditDoc.h  AvpEditView.cpp  AvpEditView.h  ChildFrm.cpp  ChildFrm.h  DDX_Hex.cpp  DDX_Hex.h  Dbf_defs.h  Dbf_head.h  Dbf_recd.h  FindDlg.cpp  FindDlg.h  Getdata.cpp  MainFrm.cpp  MainFrm.h  Opensgn.cpp  OptDlg.cpp  OptDlg.h  REdit.cpp  REdit.h  ScanDlg.cpp  ScanDlg.h  StdAfx.cpp  StdAfx.h  TEdit.cpp  TEdit.h  dialogs.cpp  dialogs.h  resource.h
AVP32/AvpM/: Agentint.cpp  Agentint.h  Avpm.dsp  Avpm.rc  Avpm.rc2  PID.h  Setopt.cpp  StdAfx.cpp  Stdafx.h  Vxd_msg.h  avpm.cpp  resource.h
AVP32/AvpUNP/: AvpUnp.cpp  AvpUnp.dsp
AVP32/Avp_IO/: AVP3 LLIO.dep  AVP3 LLIO.dsp  AVP3 LLIO.mak  AVP3 LLIO.vcproj  AVP_IO.def  Avp_io VxD.dep  Avp_io VxD.dsp  Avp_io VxD.mak  Avp_io VxD.vcproj  Avp_io.cpp  Avp_io.h  Avp_io.rc  Avp_io.rc2  Avp_io32.c  Avp_io32.def  Avp_io32.dep  Avp_io32.dsp  Avp_io32.h  Avp_io32.mak  Avp_io32.rc  Avp_io32.rc2  Avp_io32.vcproj  Avp_ioNT.rc  Avp_ioNT.rc2  Avp_iont.c  Avp_iont.def  Avp_iont.dep  Avp_iont.dsp  Avp_iont.mak  Avp_iont.vcproj  C_vxdio.cpp  NTLLIO.c  PostBuild.cmd  resource.h  ver_mod.h
AVP32/BSDi daemon/: AvpBSDiDaemon  AvpDaemon.info  AvpUnix.ini  Makefile  Script  avp.cpp  avp_dos.h  avp_os2.h  contain.cpp  contain.h  defUnix.prf  disk.cpp  disk.h  dword.cpp  dword.h  file_id.diz  kernel.cpp  kernel.h  loadkeys.cpp  loadkeys.h  profile.cpp  profile.h  redir.cpp  report.cpp  report.h  resource.h  start.h  typedef.h
AVP32/BaseWork/: AvpMem.dep  AvpMem.dsp  AvpMem.mak  Avpmem.cpp  BaseAPI.cpp  BaseWork.dep  BaseWork.dsp  BaseWork.mak  BaseWork.vcproj  Basework.cpp  Basework.h  Clink.cpp  Clink.h  DupInstance.cpp  DupMemory.cpp  ImgSect.c  Makefile  Makefile.in  SpcAlloc.cpp  SpcAlloc.h  StdAfx.cpp  StdAfx.h  Workarea.h  _printf.cpp  _printf.h  configure  configure.in  linkspmm.h  suballoc.cpp
AVP32/Bases/: Dlink3.h  FAKENAME.h  Method.h  Pack3.h  Retcode3.h  SIZES.h  obj.mak
AVP32/DBCleanUp/: DBCleanUp.cpp  DBCleanUp.dep  DBCleanUp.dsp  DBCleanUp.h  DBCleanUp.mak  DBCleanUpWin32  DBCleanUpWin9x  DBCleanUpWinNT  DirIterators9x.cpp  DirIteratorsNT.cpp
AVP32/DOS cl/: !LITE_AL.bat  AVP.cpp  AVPDOS32.ini  AVPDOS32.sym  AVPDOS32.tgt  AVPDOS32.wpj  AVP_OS2.h  AVP_RC.h  CONTAIN.cpp  CONTAIN.h  DEFDOS32.prf  DISK.cpp  DISK.h  DWORD.cpp  FILE_ID.diz  FUNC.asm  KERNEL.cpp  KERNEL.h  LOADKEYS.cpp  LOADKEYS.h  MEMALLOC.h  MEMORY.cpp  PE_RES.h  PROFILE.cpp  PROFILE.h  REDIR.cpp  REPORT.cpp  REPORT.h  START.cpp  START.h  VSPRINTF.cpp  WHATS.new  ZRDX.bat
AVP32/DOS locale/: AVP32.rc  AVP32DOS.rc  AVP_DOS.h  AVP_DOSE.rc  AVP_DOSP.rc  AVP_DOSR.rc  AVP_LOCE.dlk  AVP_LOCP.dlk  AVP_LOCR.dlk  EXTRA.rc
AVP32/DOS shell/: AVPDOS32.ini  AVPTV32.bat  AVPTV32.cpp  AVPTV32.sym  AVPTV32.tgt  AVP_OS2.h  AVP_RC.h  CLASSES.cpp  CLASSES.h  CONSTS.h  CONTAIN.cpp  CONTAIN.h  DEFDOS32.prf  DISK.cpp  DOS32TV.wpj  FUNC.asm  LOADKEYS.cpp  LOADKEYS.h  MAKEFILE  MEMORY.cpp  PROFILE.cpp  PROFILE.h  README.txt  REDIR.cpp  START.h  TV32DEF.h  VIEWER.c  VIEWER.cpp  VSPRINTF.cpp  ZRDX.bat
AVP32/Debug/: AVE_Sql.lib
AVP32/FPI/: AVP-FPI-DLL-spec.doc  FPI-API.doc  FPI_IDS.h  avp_cs.h  fpi-api-1.17.doc  fpiapi.h
AVP32/FSAVP/: FSAVP 350.dsp  FSAVP 351.dsp  FSAVP 400.dsp  FSAVP 4002.dsp  FSAVP 400G.dsp  FSAVP.cpp  FSAVP.h  FSAVP.ini  FSAVPDev.cpp  FSAVPDev.h  FSBase.cpp  FSBase.h  Fsavp.rc  Fsavp.rc2  GKSupp.cpp  MESSAGES.ini  MSGLOG.aps  MSGLOG.h  MSGLOG.mc  Readme.txt  Sysio.cpp  Sysio.h  Syssign.cpp  stdafx.h
AVP32/GkNT/: Fsgk350.lib  Fsgk351.lib  Fsgk400.lib  Gkapi.h
AVP32/GkNT2/: Fsgk.lib  Gkapi.h
AVP32/IOCache/: FileIO.cpp  TFileData.h  fileio.h
AVP32/Install/: 0004B81E.key  AVP.ini  Install.dsp  Install.mak  avp.txt
AVP32/KLE/: Engine.mak  KLE Engine.dsp  KLE.dsw  KLEAPI.h  KLE_IPL.cpp  KLE_IPL.h  README.txt  files.lst
AVP32/KLE_APP/: FUNCTION.h  KLE_APP.cpp  KLE_APP.dsp  KLH.h  KLH_SYS.cpp  KLH_SYS.dsp  KLH_SYS.h  KLH_SYS.ini  KLH_SYSDev.cpp  KLH_SYSDev.h  KLH_VXD.cpp  KLH_VXD.def  KLH_VXD.dsp  KLH_VXD.h  ReadMe.txt  SendDIOC.c  SendDIOC.h  StdAfx.cpp  StdAfx.h  klh_vxd.rc  klh_vxd.rc2
AVP32/KLE_SYS/: KLE_SYS.cpp  KLE_SYS.dsp  KLE_SYS.h  KLE_SYS.ini  KLE_SYS.rc  KLE_SYS.rc2  KLE_SYSDev.cpp  KLE_SYSDev.h  Resource.h  StdAfx.h  Sysio.cpp  Sysio.h  Syssign.cpp
AVP32/KLE_VXD/: FILE_IO.h  File_io.c  KLE_VXD.cpp  KLE_VXD.def  KLE_VXD.dsp  KLE_VXD.h  KLE_VXD.rc  KLE_VXD.rc2  StdAfx.h  Vxdio.cpp
AVP32/MemHlp/: MemHlp.dsp
AVP32/Method/: METHOD.def  Method.c  Method.dsp  Method.rc  Method.rc2  SIGNS.h  resource.h
AVP32/RELEASE/: AVE_Sql.lib  Release.dsp  (+3 more)
(+14599 files in other folders)
